err/myvdl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/myvdl-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/myvdlclass'...
Listing './lib/python3.5/site-packages/myvdlclass/lib'...
Compiling './lib/python3.5/site-packages/myvdlclass/lib/core.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/lib/core.py", line 34
    print "URL is not supported!"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/myvdlclass/lib/curl.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/lib/curl.py", line 80
    print "Download complete!"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/myvdlclass/lib/plugins.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/lib/plugins.py", line 129
    print p.extensions
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/myvdlclass/plugins'...
Compiling './lib/python3.5/site-packages/myvdlclass/plugins/mailru.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/plugins/mailru.py", line 85
    print "MAIL.RU: Unsupported url!"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/myvdlclass/plugins/rutuberu'...
Compiling './lib/python3.5/site-packages/myvdlclass/plugins/rutuberu/__init__.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/plugins/rutuberu/__init__.py", line 58
    print "RUTube: URL %s is not supported!" % self.url
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/myvdlclass/plugins/rutuberu/embed.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/plugins/rutuberu/embed.py", line 22
    print "RUTUBE Embed..."
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/myvdlclass/plugins/rutuberu/mainpage.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/plugins/rutuberu/mainpage.py", line 26
    print "RUTUBE Mainpage..."
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/myvdlclass/plugins/tntonline.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/plugins/tntonline.py", line 48
    print "Can't find video ident!"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/myvdlclass/plugins/usclab'...
Compiling './lib/python3.5/site-packages/myvdlclass/plugins/usclab/__init__.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/plugins/usclab/__init__.py", line 74
    print "LOGIN",
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/myvdlclass/plugins/youtube.py'...
***   File "./lib/python3.5/site-packages/myvdlclass/plugins/youtube.py", line 28
    print "It would be better to use youtube-dl software!"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/myvdlclass/scripts'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
